--- a/css/modules/header.css
+++ b/css/modules/header.css
@@ -12,6 +12,7 @@
 .header__logo {
 	font-size: 1.5rem;
 	font-weight: bold;
+	font-style: italic;
 }
 
 
