--- a/css/modules/responsive.css
+++ b/css/modules/responsive.css
@@ -1,3 +1,26 @@
+/* Mobile STYLES */
+@media only screen and (min-width: 380px) {
+	.card__container {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr) !important;
+		gap: 10px;
+
+
+	}
+}
+
+/* Mobile STYLES */
+@media only screen and (min-width: 524px) {
+	.card__container {
+		display: grid;
+		grid-template-columns: repeat(3, 1fr) !important;
+		gap: 10px;
+
+
+	}
+}
+
+
 /* TABLET STYLES */
 
 @media screen and (min-width: 768px) {
@@ -53,7 +76,7 @@
 	.card__container {
 
 		display: grid;
-		grid-template-columns: repeat(2, 1fr) !important;
+		grid-template-columns: repeat(3, 1fr) !important;
 		gap: 10px;
 
 	}
